# technopark_highload_web_server

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh
server/cmd/: main.c
server/include/: http.h  http_inner.h  logger.h  server.h  set_config.h  sig_handler.h
server/src/http/: http.c
server/src/lib_http/: http.c  read_req.c  send_resp.c
server/src/lib_log/: logger.c
server/src/lib_set_config/: set_config.c
server/src/lib_sig_handler/: sig_handler.c
